--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@
       // Contact info
       contact: {
         email: "stephenbugi525@gmail.com",
-        linkedin: "https://www.linkedin.com/in/stephen-raj-ai/",
+        linkedin:"https://www.linkedin.com/in/stephen-raj-ai",
         github: "Available on request",
         availability: "Open to internships, projects, and collaboration"
       }
