--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     * { margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth; }
     
-    /* --- NEW FEATURE: HIDE DEFAULT CURSOR ON DESKTOP --- */
+    /* HIDE DEFAULT CURSOR ON DESKTOP */
     @media (min-width: 768px) {
       * { cursor: none !important; }
     }
@@ -46,7 +46,7 @@
       width: 100%;
     }
 
-    /* --- NEW FEATURE: SCI-FI CURSOR --- */
+    /* SCI-FI CURSOR */
     .cursor-dot, .cursor-outline {
       position: fixed; top: 0; left: 0; transform: translate(-50%, -50%); border-radius: 50%; z-index: 9999; pointer-events: none;
     }
@@ -55,7 +55,7 @@
     
     body.hovering .cursor-outline { width: 60px; height: 60px; background-color: rgba(0, 242, 255, 0.1); border-color: var(--secondary); border-width: 2px; }
 
-    /* --- NEW FEATURE: LIVE TELEMETRY BAR --- */
+    /* LIVE TELEMETRY BAR */
     .telemetry-bar {
       position: fixed; bottom: 0; left: 0; width: 100%; height: 25px;
       background: rgba(5, 5, 8, 0.9); border-top: 1px solid rgba(255,255,255,0.1);
@@ -78,7 +78,7 @@
       padding: 2rem;
       position: relative;
       z-index: 2;
-      padding-bottom: 3rem; /* Space for telemetry */
+      padding-bottom: 3rem; 
     }
 
     h1, h2, h3 { font-family: var(--font-heading); }
@@ -287,16 +287,16 @@
       <h2 class="section-title">Neural Journey</h2>
       <div class="timeline">
         <div class="timeline-item">
-          <div class="timeline-date">Jan 2024 - Present</div>
-          <h3 style="color:var(--primary)">Data Science Intern</h3>
-          <p style="color:#ccc; font-size:0.9rem;">Big Bucks Innovation Pvt Ltd • Chennai</p>
-          <p style="color:#888; font-size:0.85rem; margin-top:0.5rem;">Optimizing ML pipelines and analyzing financial data.</p>
+          <div class="timeline-date">Jan 2026 - Present</div>
+          <h3 style="color:var(--primary)">AI Solutions Architect</h3>
+          <p style="color:#ccc; font-size:0.9rem;">Freelance • Remote</p>
+          <p style="color:#888; font-size:0.85rem; margin-top:0.5rem;">Designing autonomous agents and enterprise LLM integrations.</p>
         </div>
         <div class="timeline-item">
-          <div class="timeline-date">2023 - Present</div>
-          <h3 style="color:white">AI Solutions Architect</h3>
-          <p style="color:#ccc; font-size:0.9rem;">Freelance • Remote</p>
-          <p style="color:#888; font-size:0.85rem; margin-top:0.5rem;">Building LLM agents and 3D web interfaces.</p>
+          <div class="timeline-date">Jan 2024 - Dec 2025</div>
+          <h3 style="color:white">Data Science Intern</h3>
+          <p style="color:#ccc; font-size:0.9rem;">Big Bucks Innovation Pvt Ltd • Chennai</p>
+          <p style="color:#888; font-size:0.85rem; margin-top:0.5rem;">Completed 2-year tenure optimizing financial ML pipelines.</p>
         </div>
         <div class="timeline-item">
           <div class="timeline-date">2023 - 2027</div>
