--- a/index.html
+++ b/index.html
@@ -713,8 +713,8 @@
             prog.style.width = "100%"; 
             // Real Download Trigger
             const link = document.createElement('a');
-            link.href = 'assets/Resume.pdf'; // MUST match your file
-            link.download = 'Stephen_Resume.pdf';
+            link.href = 'assets/Stephen_Raj_T_Resume.pdf';
+            link.download = 'Stephen_Raj_T_Resume.pdf';
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
