--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
             prog.style.width = "100%"; 
             // Real Download Trigger
             const link = document.createElement('a');
-            link.href = 'assets/Stephen_Raj_T_Resume.pdf';
+            link.href = 'assets/Stephen_Raj_T_Resume.pdf'; // MUST match your file
             link.download = 'Stephen_Raj_T_Resume.pdf';
             document.body.appendChild(link);
             link.click();
